--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -44,7 +44,7 @@
             <span><%= link_to "Signup", :controller => 'account', :action => 'signup' %></span>
           <% end -%>
         </div>
-        <%= link_to image_tag('logo.gif', :size => "369x105", :alt => "CityCliq Home", :border => '0'), home_path %>
+        <%= link_to image_tag('logo.gif', :size => "369x105", :alt => "CityCliq Home", :border => '0'), root_path %>
   		</div>
 	    </div>
 	    <div id="content">
