--- a/app/views/billing_codes/show.html.erb
+++ b/app/views/billing_codes/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_billing_code_path(@billing_code) %> |
-<%= link_to 'Back', billing_codes_path %>
+<%= link_to 'Edit', edit_client_billing_code_path(@client, @billing_code) %> |
+<%= link_to 'Back', client_billing_codes_path(@client) %>
