--- a/app/views/billing_codes/new.html.erb
+++ b/app/views/billing_codes/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New billing_code</h1>
 
-<% form_for(:billing_code, :url => billing_codes_path) do |f| %>
+<% form_for [@client, @billing_code] do |f| %>
   <p>
     <b>Code</b><br />
     <%= f.text_field :code %>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', billing_codes_path %>
+<%= link_to 'Back', client_billing_codes_path(@client) %>
