--- a/app/views/clients/index.html.haml
+++ b/app/views/clients/index.html.haml
@@ -30,4 +30,5 @@
 = link_to 'New client', new_client_path
 
 %br
-= link_to 'Update draft timesheets count', counts_clients_path, :remote => true, 'data-type' => :json, :id => 'update_draft_timesheets'
+= link_to 'Update draft timesheets count', counts_clients_path, :remote => true, 'data-type' => :jsonp, :id => 'update_draft_timesheets'
+-# = link_to 'Update draft timesheets count', counts_clients_path, :remote => true, 'data-type' => :json, :id => 'update_draft_timesheets'
